# ucm_tfm

./: .gitignore  README.md  env.example  pyproject.toml  pytest.ini  requirements.txt  run_lakehouse_layers_tests.sh
airflow/: README.md
airflow/dags/: enums.py  (+1 more)
code/: .env.example  Dockerfile  Makefile  README.md  env.example  pyproject.toml  test_number_formatting.py
code/src/dags/: sample_dag.py
code/src/databricks_telegram_bot/: Dockerfile  README.md  config.py  databricks_client.py  docker-compose.yml  main.py  setup.py  streamlit_ui.py  telegram_bot.py
code/src/libraries/bronze_layer/: ingest_engine.py  registry.py
code/src/libraries/bronze_layer/ingestors/: base.py  batch_ingestor.py  streaming_ingestor.py
code/src/libraries/gold_layer/: __init__.py  gold_engine.py  registry.py
code/src/libraries/gold_layer/processors/: __init__.py  base.py  base_gold.py  dim_clientes.py  dim_forma_pago.py  dim_productos.py  dim_rutas.py  dim_ubicaciones.py  fact_detalle_facturas.py  fact_facturas.py  sales_by_route.py  sales_by_route_model.py
code/src/libraries/ingest_engine/: ingest_engine.py
code/src/libraries/ingest_engine/ingestors/: base.py  batch_ingestor.py
code/src/libraries/machine_learning/: mlflow_utils.py  xgb_model.py
code/src/libraries/silver_layer/: process_engine.py  registry.py
code/src/libraries/silver_layer/processors/: __init__.py  base.py  detalle_facturas.py  detalle_notas_credito.py  facturas.py  notas_credito.py
code/src/streaming/: README.md  consumer.py  producer.py  requirements.txt
code/test/databricks_telegram_bot/: test_databricks_client.py  test_telegram_bot.py
code/tests/bronze_layer/: test_batch_ingestor.py  test_streaming_ingestor.py
code/tests/databricks_telegram_bot/: test_databricks_client.py  test_telegram_bot.py
code/tests/gold_layer/: test_dim_clientes_processor.py  test_dim_forma_pago_processor.py  test_dim_productos_processor.py  test_dim_rutas_processor.py  test_dim_ubicaciones_processor.py  test_fact_detalle_facturas_processor.py  test_fact_facturas_processor.py  test_sales_by_route_processor.py
code/tests/silver_layer/: test_detalle_facturas_processor.py  test_detalle_notas_credito_processor.py  test_facturas_processor.py  test_notas_credito_processor.py
code/tests/streaming/: test_consumer.py  test_producer.py
databricks_notebooks/: Bronze.dbc  Bronze.py  Exploratory Analysis.dbc  Gold.py  Silver.dbc  Silver.py
infrastructure/: main.tf  providers.tf  terraform.tfvars  test.txt  variables.tf
scripts/: aks_login.sh
(+78 files in other folders)
