[project]
name = "ucm-tfm-lakehouse"
version = "1.0.0"
description = "UCM TFM Lakehouse Project"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "apache-airflow>=3.0.3",
  "apache-airflow-providers-databricks==7.7.0",
  "pyarrow==20.0.0",
  "loguru>=0.7.1",
  "pandas>=2.1.2",
  "confluent-kafka==2.10.0",
  "databricks-sdk>=0.12.0",
  "attrs==25.3.0",
  "Authlib==1.5.2",
  "pytest==8.3.4",
  "pytelegrambotapi>=4.14.0",
  "databricks-connect>=15.4.4",
  "grpcio>=1.74.0",
  "grpcio-status==1.59.3",
  "streamlit>=1.28.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false

[tool.setuptools]
package-dir = { "" = "src/libraries" }

[tool.setuptools.packages.find]
where = ["src/libraries"]
include = ["bronze_layer*", "silver_layer*", "gold_layer*", "machine_learning*"]

[dependency-groups]
dev = [
    "databricks-connect==15.4.4",
    "grpcio>=1.74.0",
    "grpcio-status==1.59.3",
    "pytest-cov>=6.2.1",
]
